--- a/app/client/main.html
+++ b/app/client/main.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@trimble-oss/modus-icons/dist/modus-solid/fonts/modus-icons.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SpireBooks</title>
 </head>
